
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int C2C0 ;
 int C2C1 ;
 int CAM ;
 int CAS0 ;
 int CAS1 ;
 int CAS2 ;
 int EG ;
 int I2C0 ;
 int I2Q ;
 int MN ;
 int MS ;
 int NIU ;
 int OCM0 ;
 int PGN0 ;
 int PGN1 ;
 int PGN2 ;
 int PGN3 ;
 int PGND ;
 int PGNI ;
 int PGS0 ;
 int PGS1 ;
 int PGS2 ;
 int PGS3 ;
 int PGSD ;
 int PGSI ;
 int PH ;
 int PS ;
 int QMN ;
 int QMS ;
 int ROMUSB ;
 int RPMX0 ;
 int RPMX1 ;
 int RPMX2 ;
 int RPMX3 ;
 int RPMX4 ;
 int RPMX5 ;
 int RPMX6 ;
 int RPMX7 ;
 int SMB ;
 int SN ;
 int SQN0 ;
 int SQN1 ;
 int SQN2 ;
 int SQN3 ;
 int SQS0 ;
 int SQS1 ;
 int SQS2 ;
 int SQS3 ;
 int SRE ;
 int TIMR ;
 int XDMA ;
 int crb_addr_transform (int ) ;

__attribute__((used)) static void crb_addr_transform_setup(void)
{
 crb_addr_transform(XDMA);
 crb_addr_transform(TIMR);
 crb_addr_transform(SRE);
 crb_addr_transform(SQN3);
 crb_addr_transform(SQN2);
 crb_addr_transform(SQN1);
 crb_addr_transform(SQN0);
 crb_addr_transform(SQS3);
 crb_addr_transform(SQS2);
 crb_addr_transform(SQS1);
 crb_addr_transform(SQS0);
 crb_addr_transform(RPMX7);
 crb_addr_transform(RPMX6);
 crb_addr_transform(RPMX5);
 crb_addr_transform(RPMX4);
 crb_addr_transform(RPMX3);
 crb_addr_transform(RPMX2);
 crb_addr_transform(RPMX1);
 crb_addr_transform(RPMX0);
 crb_addr_transform(ROMUSB);
 crb_addr_transform(SN);
 crb_addr_transform(QMN);
 crb_addr_transform(QMS);
 crb_addr_transform(PGNI);
 crb_addr_transform(PGND);
 crb_addr_transform(PGN3);
 crb_addr_transform(PGN2);
 crb_addr_transform(PGN1);
 crb_addr_transform(PGN0);
 crb_addr_transform(PGSI);
 crb_addr_transform(PGSD);
 crb_addr_transform(PGS3);
 crb_addr_transform(PGS2);
 crb_addr_transform(PGS1);
 crb_addr_transform(PGS0);
 crb_addr_transform(PS);
 crb_addr_transform(PH);
 crb_addr_transform(NIU);
 crb_addr_transform(I2Q);
 crb_addr_transform(EG);
 crb_addr_transform(MN);
 crb_addr_transform(MS);
 crb_addr_transform(CAS2);
 crb_addr_transform(CAS1);
 crb_addr_transform(CAS0);
 crb_addr_transform(CAM);
 crb_addr_transform(C2C1);
 crb_addr_transform(C2C0);
 crb_addr_transform(SMB);
 crb_addr_transform(OCM0);
 crb_addr_transform(I2C0);
}
